--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">Дальномір</string>
+    <string name="app_name">Далекомір</string>
     <string name="action_settings">Settings</string>
+    <string name="action_calibr">Калібрування</string>
+    <string name="action_calibration">Калибровка</string>
     <string name="angle_str">Кут до землі</string>
     <string name="dialog_title">Відстань до рiвня очей</string>
     <string name="togle1_str">Базисна вiдстань 20м</string>
