fix angels,add help

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Далекомір</string>
     <string name="action_settings">Settings</string>
+    <string name="action_help">Правила роботи</string>
     <string name="action_calibr">Калібрування</string>
     <string name="action_calibration">Калибровка</string>
     <string name="angle_str">Кут до землі</string>
@@ -13,4 +14,13 @@
     <string name="line4">тел.<u>0572-94-96-42</u></string>
     <string name="line5"><u>050-400-83-41</u></string>
     <string name="line6"><u>097-529-67-78</u></string>
+
+    <string name="calc_help1">1. Відстань до рiвня очей</string>
+    <string name="calc_help2">2. Пiднести пристрiй до ока </string>
+    <string name="calc_help3">3. Проводити замiр увздовж стрiлки</string>
+    <string name="calc_help4">4. Натиснути на екран пристрою, для отримання результату вимiрювання</string>
+
+    <string name="calib_help1">1. У правому верхньому кутку вибрати меню Калiбрування</string>
+    <string name="calib_help2">2. Шоб додати значення калiбровки, треба натиснути кнопку - Додати калiбрування,та виконувти наступнi кроки оисанны у пунктi вимiравння  </string>
+    <string name="calib_help3">3. Щоб убрати калiбрувальнi даннi, треба натиснути кнопку - Сбросити вимiрювання</string>
 </resources>
